--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,134 @@
-matplotlib==3.6.2
-numpy==1.23.3
-pandas==1.4.4
-scikit_learn==1.1.3
-streamlit==1.27.2
+altair==5.0.1
+asttokens==2.3.0
+attrs==23.1.0
+backcall==0.2.0
+blinker==1.6.2
+cachetools==5.3.1
+certifi==2023.5.7
+charset-normalizer==3.1.0
+click==8.1.3
+cloudpickle==2.2.1
+colorama==0.4.6
+coloredlogs==15.0.1
+comm==0.1.4
+contourpy==1.1.0
+cycler==0.11.0
+Cython==3.0.2
+dask==2023.8.0
+debugpy==1.6.7.post1
+decorator==5.1.1
+et-xmlfile==1.1.0
+executing==1.2.0
+flatbuffers==23.5.26
+fonttools==4.42.0
+fsspec==2023.6.0
+gitdb==4.0.10
+GitPython==3.1.31
+humanfriendly==10.0
+hupper==1.12
+idna==3.4
+imageio==2.31.1
+imbalanced-learn==0.11.0
+imblearn==0.0
+importlib-metadata==6.7.0
+ipykernel==6.25.1
+ipython==8.15.0
+jedi==0.19.0
+Jinja2==3.1.2
+joblib==1.3.1
+jsonschema==4.17.3
+jupyter_client==8.3.1
+jupyter_core==5.3.1
+kiwisolver==1.4.4
+lazy_loader==0.3
+llvmlite==0.40.1
+locket==1.0.0
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+matplotlib==3.7.2
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+mlxtend==0.22.0
+mpmath==1.3.0
+nest-asyncio==1.5.7
+networkx==3.1
+niapy==2.0.5
+nltk==3.8.1
+numba==0.57.1
+numpy==1.24.4
+onnxruntime==1.15.1
+onnxruntime-gpu==1.15.1
+opencv-python-headless==4.8.0.74
+openpyxl==3.1.2
+packaging==23.1
+pandas==2.0.3
+parso==0.8.3
+partd==1.4.0
+PasteDeploy==3.0.1
+patsy==0.5.3
+pickleshare==0.7.5
+Pillow==9.5.0
+plaster==1.1.2
+plaster-pastedeploy==1.0.1
+platformdirs==3.8.1
+plspm==0.5.6
 pmdarima==2.0.3
+pooch==1.7.0
+prompt-toolkit==3.0.39
+protobuf==4.23.3
+psutil==5.9.5
+pure-eval==0.2.2
+pyarrow==12.0.1
+pydeck==0.8.1b0
+Pygments==2.15.1
+PyMatting==1.1.8
+Pympler==1.0.1
+pyparsing==3.0.9
+pyramid==2.0.2
+pyreadline3==3.4.1
+pyrsistent==0.19.3
+python-dateutil==2.8.2
+pytz==2023.3
+pytz-deprecation-shim==0.1.0.post0
+PyWavelets==1.4.1
+pywin32==306
+PyYAML==6.0.1
+pyzmq==25.1.1
+regex==2023.8.8
+rembg==2.0.49
+requests==2.31.0
+rich==13.4.2
+Sastrawi==1.0.1
+scikit-image==0.21.0
+scikit-learn==1.3.0
+scipy==1.11.1
+six==1.16.0
+sklearn==0.0.post5
+smmap==5.0.0
+snowballstemmer==2.2.0
+stack-data==0.6.2
 statsmodels==0.14.0
+streamlit==1.27.0
+swifter==1.4.0
+sympy==1.12
+tenacity==8.2.2
+threadpoolctl==3.1.0
+tifffile==2023.7.4
+toml==0.10.2
+toolz==0.12.0
+tornado==6.3.2
+tqdm==4.65.0
+traitlets==5.9.0
+translationstring==1.4
+typing_extensions==4.7.1
+tzdata==2023.3
+tzlocal==4.3.1
+urllib3==2.0.3
+validators==0.20.0
+venusian==3.0.0
+watchdog==3.0.0
+wcwidth==0.2.6
+WebOb==1.8.7
+zipp==3.15.0
+zope.deprecation==5.0
+zope.interface==6.0
